Fix bulk photos delimiters and PC viewport visibility/scaling

--- a/src/index.css
+++ b/src/index.css
@@ -1376,20 +1376,29 @@ section { padding: 7rem 0; }
 }
 
 .live-wheel-wrapper {
-  --card-border-radius: 16px;
-  --card-width: max(250px, 22vw);
-  --card-height: calc(var(--card-width) * 6 / 4);
-  --radius: max(450px, calc(var(--card-width) * var(--cards) / (2 * 3.1416)));
+  --card-border-radius: 20px;
+  --card-width: max(220px, 45vw);
+  --card-height: calc(var(--card-width) * 1.45);
+  --radius: max(320px, calc(var(--card-width) * var(--cards) / (2 * 3.1416)));
 
   position: absolute;
   width: calc(var(--radius) * 2);
   height: calc(var(--radius) * 2);
-  top: calc(50% + var(--radius) - var(--card-height) * 0.2);
+  top: calc(22vh + var(--card-height) + var(--radius));
   left: 50%;
   transform-origin: center center;
   transform: translateX(-50%) rotate(calc(var(--rotate) * -360deg));
   transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   pointer-events: none;
+}
+
+@media (min-width: 1025px) {
+  .live-wheel-wrapper {
+    --card-width: 35vh;
+    --card-height: calc(var(--card-width) * 1.5); /* 52.5vh */
+    --radius: max(500px, calc(var(--card-width) * var(--cards) / (2 * 3.1416)));
+    top: calc(20vh + var(--card-height) + var(--radius));
+  }
 }
 
 .live-card {
